--- a/mobile/2-UserProfiles/usermarket.html
+++ b/mobile/2-UserProfiles/usermarket.html
@@ -239,7 +239,7 @@
     </div>
 
     <div class="footer">
-        <a href="/BeeMazing-Y1/mobile/1-Home/home.html" class="footer-icon" aria-label="Home">
+        <a href="/BeeMazing-Y1/mobile/1-Home/home.html" id="homeFooterLink" class="footer-icon" aria-label="Home">
             <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
             <span>Home</span>
         </a>
@@ -266,34 +266,37 @@
     </div>
 
     <script>
-        const urlParams = new URLSearchParams(window.location.search);
-        const userName = urlParams.get('user');
-        let adminEmail = urlParams.get('adminEmail') || localStorage.getItem('currentAdminEmail');
+const urlParams = new URLSearchParams(window.location.search);
+const userName = urlParams.get('user');
+let adminEmail = urlParams.get('adminEmail') || localStorage.getItem('currentAdminEmail');
 if (adminEmail) {
-    localStorage.setItem('currentAdminEmail', adminEmail); // Save it for future access
+    localStorage.setItem('currentAdminEmail', adminEmail);
+    const homeLink = document.getElementById('homeFooterLink');
+    if (homeLink) {
+        homeLink.href = `/BeeMazing-Y1/mobile/1-Home/home.html?adminEmail=${encodeURIComponent(adminEmail)}`;
+    }
 }
 
+if (!userName || !adminEmail) {
+    document.getElementById('rewardList').innerHTML = "<p>Error: Missing user or admin information.</p>";
+} else {
+    document.getElementById('userName').textContent = userName;
+    document.getElementById('profileButton').href = `/BeeMazing-Y1/mobile/2-UserProfiles/users.html?user=${encodeURIComponent(userName)}`;
+    document.getElementById('marketButton').href = `/BeeMazing-Y1/mobile/2-UserProfiles/usermarket.html?user=${encodeURIComponent(userName)}&adminEmail=${encodeURIComponent(adminEmail)}`;
+    document.getElementById('rewardsButton').href = `/BeeMazing-Y1/mobile/2-UserProfiles/userrewards.html?user=${encodeURIComponent(userName)}`;
+    loadRewards();
+}
 
-        if (!userName || !adminEmail) {
-            document.getElementById('rewardList').innerHTML = "<p>Error: Missing user or admin information.</p>";
-        } else {
-            document.getElementById('userName').textContent = userName;
-            document.getElementById('profileButton').href = `/BeeMazing-Y1/mobile/2-UserProfiles/users.html?user=${encodeURIComponent(userName)}`;
-            document.getElementById('marketButton').href = `/BeeMazing-Y1/mobile/2-UserProfiles/usermarket.html?user=${encodeURIComponent(userName)}`;
-            document.getElementById('rewardsButton').href = `/BeeMazing-Y1/mobile/2-UserProfiles/userrewards.html?user=${encodeURIComponent(userName)}`;
-            loadRewards();
-        }
-
-        // Highlight active footer icon
-        document.querySelectorAll('.footer a').forEach(link => {
-            const currentPath = window.location.pathname.replace(/\/$/, '');
-            const linkPath = new URL(link.href).pathname.replace(/\/$/, '');
-            if (currentPath === linkPath) {
-                link.classList.add('active');
-            } else {
-                link.classList.remove('active');
-            }
-        });
+// Highlight active footer icon
+document.querySelectorAll('.footer a').forEach(link => {
+    const currentPath = window.location.pathname.replace(/\/$/, '');
+    const linkPath = new URL(link.href).pathname.replace(/\/$/, '');
+    if (currentPath === linkPath) {
+        link.classList.add('active');
+    } else {
+        link.classList.remove('active');
+    }
+});
 
         async function loadRewards() {
             const rewardList = document.getElementById('rewardList');
