--- a/mobile/2-UserProfiles/usermarket.html
+++ b/mobile/2-UserProfiles/usermarket.html
@@ -240,7 +240,8 @@
     </div>
 
     <div class="footer">
-        <a href="/BeeMazing-Y1/mobile/1-Home/home.html" id="homeFooterLink" class="footer-icon" aria-label="Home">
+        <a id="homeFooterLink" class="footer-icon" href="/BeeMazing-Y1/mobile/1-Home/home.html" aria-label="Home">
+
             <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
             <span>Home</span>
         </a>
