--- a/mobile/2-UserProfiles/usermarket.html
+++ b/mobile/2-UserProfiles/usermarket.html
@@ -15,8 +15,12 @@
             --primary-color: #FFC107;
             --secondary-color: #212121;
             --accent-color: #FFFFFF;
-            --light-bg: #FFF8E1;
-            --text-color: #212121;
+            --light-bg: #1E1F26;
+            --text-color: #FFFFFF;
+            --header-height: 58px;
+            --footer-height: 70px;
+            --border-dark: #444754;
+            --card-bg: #2A2B32;
         }
         body {
             font-family: 'Poppins', Arial, sans-serif;
@@ -28,23 +32,32 @@
             overflow-x: hidden;
         }
         .header {
-            background: linear-gradient(135deg, var(--primary-color), #FFB300);
+            background: var(--secondary-color);
             padding: 15px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            text-align: center;
+            position: fixed;
+            top: 0;
+            width: 100%;
+            height: var(--header-height);
+            z-index: 100;
         }
         .title {
             font-size: 24px;
             font-weight: 600;
-            color: var(--secondary-color);
-            text-transform: uppercase;
+            color: var(--primary-color);
             letter-spacing: 1px;
         }
         .content {
-            flex: 1;
+            position: absolute;
+            top: var(--header-height);
+            bottom: var(--footer-height);
+            width: 100%;
             padding: 20px;
             overflow-y: auto;
-            background: url('data:image/svg+xml,%3Csvg width="40" height="40" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg"%3E%3Cpath d="M20 0l10 5.77v11.54L20 23.08l-10-5.77V5.77L20 0zm0 2.31L11.54 7.08v9.84L20 21.69l8.46-4.77V7.08L20 2.31z" fill="%23FFC107" fill-opacity="0.1"/%3E%3C/svg%3E') repeat;
+            background: url('data:image/svg+xml,%3Csvg width="40" height="40" viewBox="0 0 40 40" xmlns="" fill="%23FFC107" fill-opacity="0.1"/%3E%3C/svg%3E') repeat;
         }
         .reward-list {
             list-style: none;
@@ -57,10 +70,11 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background: var(--accent-color);
+            background: var(--card-bg);
+            color: var(--accent-color);
             padding: 15px;
             margin: 10px 0;
-            border: 2px solid var(--primary-color);
+            border: 2px solid var(--border-dark);
             border-radius: 10px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease;
@@ -69,7 +83,7 @@
             transform: translateY(-5px);
         }
         .reward-details strong {
-            color: var(--secondary-color);
+            color: var(--accent-color);
         }
         .get-it-btn {
             padding: 10px 20px;
@@ -97,28 +111,48 @@
             position: fixed;
             bottom: 0;
             width: 100%;
-            background: linear-gradient(135deg, var(--primary-color), #FFB300);
+            display: flex;
+            justify-content: space-around;
+            background: var(--secondary-color);
             padding: 10px 0;
             box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.2);
-            text-align: center;
+            z-index: 100;
+            height: var(--footer-height);
         }
         .footer a {
-            color: var(--secondary-color);
             text-decoration: none;
+            color: var(--text-color);
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
             transition: transform 0.3s ease;
         }
         .footer a:hover {
             transform: scale(1.1);
         }
-        .footer img {
+        .footer-icon img {
             width: 40px;
             height: 40px;
-            filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
+            filter: invert(100%) drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
         }
-        /* Reward Claim Animation */
+        .footer-icon span {
+            font-size: 12px;
+            margin-top: 5px;
+            font-weight: 600;
+        }
+        .footer a.active img {
+            filter: invert(77%) sepia(88%) saturate(900%) hue-rotate(0deg)
+                brightness(100%) contrast(100%) drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2)) !important;
+        }
+        .footer a.active span {
+            color: var(--primary-color);
+        }
+        @media (max-width: 600px) {
+            .footer-icon img {
+                width: 35px;
+                height: 35px;
+            }
+        }
         .reward-overlay {
             display: none;
             position: fixed;
@@ -145,7 +179,7 @@
             animation: zoomFlash 0.8s ease-out forwards;
             position: relative;
             z-index: 1001;
-            cursor: default; /* Prevent accidental clicks inside */
+            cursor: default;
         }
         .reward-message h3 {
             color: var(--secondary-color);
@@ -205,8 +239,21 @@
     </div>
 
     <div class="footer">
-        <a href="#" id="backButton" aria-label="Back">
-            <img src="/BeeMazing-Y1/1-Home/BackBtn.png" alt="Back" />
+        <a href="/BeeMazing-Y1/mobile/1-Home/home.html" class="footer-icon" aria-label="Home">
+            <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
+            <span>Home</span>
+        </a>
+        <a href="#" id="profileButton" class="footer-icon" aria-label="Profile">
+            <img src="/BeeMazing-Y1/mobile/1-Home/ProfileBtn.png" alt="Profile" />
+            <span>Profile</span>
+        </a>
+        <a href="#" id="marketButton" class="footer-icon" aria-label="Market">
+            <img src="/BeeMazing-Y1/mobile/1-Home/MarketBtn.png" alt="Market" />
+            <span>Market</span>
+        </a>
+        <a href="#" id="rewardsButton" class="footer-icon" aria-label="Rewards">
+            <img src="/BeeMazing-Y1/mobile/1-Home/RewardsBtn.png" alt="Rewards" />
+            <span>Rewards</span>
         </a>
     </div>
 
@@ -221,81 +268,119 @@
     <script>
         const urlParams = new URLSearchParams(window.location.search);
         const userName = urlParams.get('user');
+        let adminEmail = urlParams.get('adminEmail') || localStorage.getItem('currentAdminEmail');
+if (adminEmail) {
+    localStorage.setItem('currentAdminEmail', adminEmail); // Save it for future access
+}
 
-        if (userName) {
+
+        if (!userName || !adminEmail) {
+            document.getElementById('rewardList').innerHTML = "<p>Error: Missing user or admin information.</p>";
+        } else {
             document.getElementById('userName').textContent = userName;
-            document.getElementById('backButton').href = `users.html?user=${userName}`;
-            loadRewards(userName);
+            document.getElementById('homeButton').href = `/BeeMazing-Y1/mobile/1-Home/home.html?admin=${encodeURIComponent(adminEmail)}`;
+            document.getElementById('profileButton').href = `/BeeMazing-Y1/mobile/2-UserProfiles/users.html?user=${encodeURIComponent(userName)}&admin=${encodeURIComponent(adminEmail)}`;
+document.getElementById('marketButton').href = `/BeeMazing-Y1/mobile/2-UserProfiles/usermarket.html?user=${encodeURIComponent(userName)}&adminEmail=${encodeURIComponent(adminEmail)}`;
+document.getElementById('rewardsButton').href = `/BeeMazing-Y1/mobile/2-UserProfiles/userrewards.html?user=${encodeURIComponent(userName)}&admin=${encodeURIComponent(adminEmail)}`;
+
+            loadRewards();
         }
 
-        function getUserDiamonds(userName) {
-            const rewards = JSON.parse(localStorage.getItem("familyApp_rewards")) || {};
-            return rewards[userName] || 0;
-        }
-
-        function loadRewards(userName) {
-            const rewards = JSON.parse(localStorage.getItem("familyApp_rewards_market")) || [];
-            const rewardList = document.getElementById("rewardList");
-            const userDiamonds = getUserDiamonds(userName);
-
-            rewardList.innerHTML = "";
-            if (rewards.length === 0) {
-                rewardList.innerHTML = "<p>No rewards available in the hive.</p>";
+        // Highlight active footer icon
+        document.querySelectorAll('.footer a').forEach(link => {
+            const currentPath = window.location.pathname.replace(/\/$/, '');
+            const linkPath = new URL(link.href).pathname.replace(/\/$/, '');
+            if (currentPath === linkPath) {
+                link.classList.add('active');
             } else {
-                rewards.forEach((reward) => {
-                    const rewardItem = document.createElement("li");
-                    rewardItem.className = "reward-item";
-                    const canAfford = userDiamonds >= reward.diamonds;
-                    rewardItem.innerHTML = `
-                        <div class="reward-details">
-                            <strong>${reward.name}</strong><br>
-                            Honey: ${reward.diamonds} 🍯
-                        </div>
-                        <button class="get-it-btn ${canAfford ? 'enabled' : 'disabled'}" 
-                                ${canAfford ? '' : 'disabled'} 
-                                onclick="purchaseReward('${userName}', '${reward.name}', ${reward.diamonds})">
-                            Get It
-                        </button>
-                    `;
-                    rewardList.appendChild(rewardItem);
-                });
+                link.classList.remove('active');
+            }
+        });
+
+        async function loadRewards() {
+            const rewardList = document.getElementById('rewardList');
+
+            try {
+                // Fetch user's honey balance
+                const rewardResponse = await fetch(`https://beemazing.onrender.com/api/rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
+                const rewardData = await rewardResponse.json();
+                if (!rewardResponse.ok) {
+                    throw new Error(rewardData.error || 'Failed to fetch user rewards');
+                }
+                const userDiamonds = rewardData.rewards[userName] || 0;
+
+                // Fetch market rewards
+                const marketResponse = await fetch(`https://beemazing.onrender.com/api/market-rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
+                const marketData = await marketResponse.json();
+                if (!marketResponse.ok) {
+                    throw new Error(marketData.error || 'Failed to fetch market rewards');
+                }
+                const rewards = marketData.rewards || [];
+
+                rewardList.innerHTML = '';
+                if (rewards.length === 0) {
+                    rewardList.innerHTML = '<p>No rewards available in the hive.</p>';
+                } else {
+                    rewards.forEach(reward => {
+                        const rewardItem = document.createElement('li');
+                        rewardItem.className = 'reward-item';
+                        const canAfford = userDiamonds >= reward.diamonds;
+                        rewardItem.innerHTML = `
+                            <div class="reward-details">
+                                <strong>${reward.name}</strong><br>
+                                Honey: ${reward.diamonds} 🍯
+                            </div>
+                            <button class="get-it-btn ${canAfford ? 'enabled' : 'disabled'}" 
+                                    ${canAfford ? '' : 'disabled'} 
+                                    onclick="purchaseReward('${userName}', '${reward.name}', ${reward.diamonds})">
+                                Get It
+                            </button>
+                        `;
+                        rewardList.appendChild(rewardItem);
+                    });
+                }
+            } catch (err) {
+                console.error('Error loading rewards:', err);
+                rewardList.innerHTML = '<p>Failed to load rewards. Please try again later.</p>';
             }
         }
 
-        function purchaseReward(userName, rewardName, diamondCost) {
-            const rewards = JSON.parse(localStorage.getItem("familyApp_rewards")) || {};
-            const userDiamonds = rewards[userName] || 0;
-
-            if (userDiamonds >= diamondCost) {
-                rewards[userName] = userDiamonds - diamondCost;
-                localStorage.setItem("familyApp_rewards", JSON.stringify(rewards));
-
-                const userRewards = JSON.parse(localStorage.getItem("familyApp_user_rewards")) || {};
-                if (!userRewards[userName]) userRewards[userName] = [];
-                userRewards[userName].push({ name: rewardName, date: new Date().toLocaleString() });
-                localStorage.setItem("familyApp_user_rewards", JSON.stringify(userRewards));
-
+        async function purchaseReward(userName, rewardName, diamondCost) {
+            try {
+                const response = await fetch('https://beemazing.onrender.com/api/purchase-reward', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ adminEmail, user: userName, rewardName, diamondCost })
+                });
+                const data = await response.json();
+                if (!response.ok) {
+                    throw new Error(data.error || 'Failed to purchase reward');
+                }
                 showRewardEffect(rewardName, userName);
+                loadRewards(); // Refresh the reward list
+            } catch (err) {
+                console.error('Error purchasing reward:', err);
+                alert('Failed to purchase reward. Please try again.');
             }
         }
 
         function showRewardEffect(rewardName, userName) {
-            const overlay = document.getElementById("rewardOverlay");
-            const rewardMessage = document.getElementById("claimedRewardName");
+            const overlay = document.getElementById('rewardOverlay');
+            const rewardMessage = document.getElementById('claimedRewardName');
             rewardMessage.textContent = rewardName;
 
-            overlay.classList.add("show");
+            overlay.classList.add('show');
 
             // Add flashing effect
-            const flash = document.createElement("div");
-            flash.className = "flash";
+            const flash = document.createElement('div');
+            flash.className = 'flash';
             overlay.appendChild(flash);
             setTimeout(() => flash.remove(), 600);
 
             // Add confetti burst
             for (let i = 0; i < 30; i++) {
-                const confetti = document.createElement("div");
-                confetti.className = "confetti";
+                const confetti = document.createElement('div');
+                confetti.className = 'confetti';
                 const angle = Math.random() * 360;
                 const distance = Math.random() * 20 + 10;
                 confetti.style.setProperty('--x', Math.cos(angle * Math.PI / 180) * distance);
@@ -308,13 +393,12 @@
             }
 
             // Close overlay when clicking outside the message
-            overlay.addEventListener("click", function closeOverlay(e) {
+            overlay.addEventListener('click', function closeOverlay(e) {
                 if (e.target === overlay) {
-                    overlay.classList.remove("show");
-                    loadRewards(userName); // Refresh rewards after closing
-                    overlay.removeEventListener("click", closeOverlay); // Clean up listener
+                    overlay.classList.remove('show');
+                    overlay.removeEventListener('click', closeOverlay);
                 }
-            });
+            }, { once: true });
         }
     </script>
 </body>
