--- a/register.html
+++ b/register.html
@@ -288,7 +288,7 @@
       <!-- Replace with your logo URL or remove if not needed -->
       <img src="https://i.postimg.cc/x1fDPQPX/pngtree-honey-bee-logo-design-vector-png-image-12507314-removebg-preview.png" alt="BeeMazing Logo">
     </div>
-    <h2 id="formTitle">Register - z11</h2>
+    <h2 id="formTitle">Register - z1</h2>
     <form id="authForm">
       <div class="input-group email">
         <input type="email" id="email" placeholder="Email" required />
@@ -343,7 +343,7 @@
           localStorage.setItem("currentAdminEmail", email);
 
           setTimeout(() => {
-            window.location.href = "mobile/1-Home/home.html";
+            window.location.href = "login.html";
           }, 1000);
         } else {
           message.style.color = "#D32F2F";
